--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -64,7 +64,7 @@
 
   <!-- Buttons -->
   <button id="newQuote">Show New Quote</button>
-  <button onclick="syncWithServer()">Sync Now</button>
+  <button id="syncButton">Sync Now</button>
 
   <!-- Add Quote Form -->
   <div>
